[tool.poetry]
name = "ADcheck"
version = "1.5.2"
description = "ADcheck, Assess the security of your Active Directory with few or all privileges."
readme = "README.md"
repository = "https://github.com/CobblePot59/ADcheck"
authors = ["CobblePot59"]
license = "GPL3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

packages = [
    { include = "adcheck" }
]

[tool.poetry.dependencies]
python = ">=3.9"

six = "^1.17.0"
winacl = "^0.1.9"
asysocks = "^0.2.13"
asyauth = "^0.0.21"
pyopenssl = "^25.0.0"
ldap3 = "^2.9.1"
dnspython = "^2.7.0"
aiowmi = "^0.2.3"
jinja2 = "^3.1.5"
plotly = "^5.24.1"
aiosmb = "^0.4.11"
httpx = "^0.28.1"
msldap = "^0.5.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
adcheck = "adcheck.app:run_main"
