[project]
name = "ADcheck"
version = "1.6.0"
description = "ADcheck, Assess the security of your Active Directory with few or all privileges."
readme = "README.md"
authors = [{ name = "CobblePot59" }]
license = { text = "GPLv3" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"

dependencies = [
    "aiosmb>=0.4.14",
    "aiowmi>=0.2.3",
    "jinja2>=3.1.6",
    "msldap",
    "msuaccalc>=0.1.0",
    "rich>=14.2.0",
    "winacl"
]

[project.urls]
Repository = "https://github.com/CobblePot59/ADcheck"

[project.scripts]
adcheck = "adcheck:run_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adcheck"]

[tool.uv.sources]
msldap = { git = "https://github.com/skelsec/msldap" }
winacl = { path = "src/adcheck/libs/winacl", editable = true }