[project]
name = "ADcheck"
version = "1.6.0"
description = "ADcheck, Assess the security of your Active Directory with few or all privileges."
readme = "README.md"
authors = [{ name = "CobblePot59" }]
license = { text = "GPLv3" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

dependencies = [
    "aiosmb>=0.4.14",
    "aiowmi>=0.2.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "ldap3>=2.9.1",
    "msldap",
    "msuaccalc>=0.1.0",
    "pyopenssl>=25.3.0",
    "rich>=14.2.0",
    "winacl",
]

[project.urls]
Repository = "https://github.com/CobblePot59/ADcheck"

[project.scripts]
adcheck = "adcheck:run_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adcheck"]

[tool.uv.sources]
msldap = { git = "https://github.com/skelsec/msldap" }
winacl = { git = "https://github.com/skelsec/winacl" }
